--- a/main.ipynb
+++ b/main.ipynb
@@ -1,8 +1,371 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "75343f55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "e471863b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "e46119db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cargar los datos\n",
+    "df = pd.read_parquet('coffee_db.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "25e9aeb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "26169496",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cargar los datos\n",
+    "df = pd.read_parquet('coffee_db.parquet')\n",
+    "\n",
+    "# Columnas a mantener fijas\n",
+    "id_vars = ['Country', 'Coffee type', 'Total_domestic_consumption']\n",
+    "\n",
+    "# Columnas de años que se van a transformar en filas\n",
+    "value_vars = df.columns.drop(id_vars)\n",
+    "\n",
+    "# Transformar de formato ancho a largo\n",
+    "df_long = pd.melt(df, id_vars=id_vars, value_vars=value_vars, var_name='Year', value_name='Consumption')\n",
+    "\n",
+    "# Limpiar y convertir la columna de año\n",
+    "df_long['Year'] = df_long['Year'].str.slice(0, 4).astype(int)\n",
+    "\n",
+    "# Renombrar columnas para mejor manejo\n",
+    "df_long.rename(columns={\n",
+    "    'Country': 'Pais',\n",
+    "    'Coffee type': 'Tipo_Cafe',\n",
+    "    'Total_domestic_consumption': 'Consumo_Total_Original',\n",
+    "    'Consumption': 'Consumo'\n",
+    "}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "6b4a4e35",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¿Son consistentes los totales calculados con la columna original?: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Verificar la consistencia de la columna de consumo total\n",
+    "verification = df_long.groupby('Pais')['Consumo'].sum().reset_index()\n",
+    "merged = pd.merge(verification, df[['Country', 'Total_domestic_consumption']].drop_duplicates(), left_on='Pais', right_on='Country')\n",
+    "\n",
+    "# La función np.allclose compara si dos arrays son iguales elemento por elemento\n",
+    "are_totals_consistent = np.allclose(merged['Consumo'], merged['Total_domestic_consumption'])\n",
+    "\n",
+    "print(f\"¿Son consistentes los totales calculados con la columna original?: {are_totals_consistent}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "dcf4e429",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_data(data, x, y, kind='bar', title='', xlabel='', ylabel='', add_labels=True):\n",
+    "    \"\"\"Crea un gráfico de barras o líneas con diseño mejorado y etiquetas en Millones (M).\"\"\"\n",
+    "    fig, ax = plt.subplots()\n",
+    "\n",
+    "    if kind == 'bar':\n",
+    "        sns.barplot(x=x, y=y, data=data, ax=ax, palette='viridis', edgecolor='black')\n",
+    "    elif kind == 'line':\n",
+    "        sns.lineplot(x=x, y=y, data=data, ax=ax, marker='o', color='dodgerblue', linewidth=2.5, markersize=7)\n",
+    "\n",
+    "    ax.set_title(title, pad=20)\n",
+    "    ax.set_xlabel(xlabel)\n",
+    "    ax.set_ylabel(ylabel)\n",
+    "\n",
+    "    ax.set_xticks(data[x].unique())\n",
+    "    ax.tick_params(axis='x', rotation=70)\n",
+    "    sns.despine()\n",
+    "\n",
+    "    if add_labels:\n",
+    "        if kind == 'bar':\n",
+    "            for p in ax.patches:\n",
+    "                value = p.get_height()\n",
+    "                if 'Percent' in y:\n",
+    "                    label = f'{value:.1f}%'\n",
+    "                else:\n",
+    "                    # Formato en Millones (M) sin decimales\n",
+    "                    label = f'{value/1e6:.0f}M'\n",
+    "                ax.annotate(label, (p.get_x() + p.get_width() / 2., value),\n",
+    "                            ha='center', va='center', xytext=(0, 9), textcoords='offset points', fontsize=10)\n",
+    "        \n",
+    "        elif kind == 'line' and ('Tipo_Cafe' not in data.columns or data['Tipo_Cafe'].nunique() == 1):\n",
+    "            for index, row in data.iterrows():\n",
+    "                value = row[y]\n",
+    "                # --- MODIFICACIÓN CLAVE: Etiqueta en Millones (M) ---\n",
+    "                label = f'{value/1e6:.0f}M'\n",
+    "                ax.text(row[x], value + (ax.get_ylim()[1] * 0.015), label,\n",
+    "                        ha='center', va='bottom', fontsize=9, color='black')\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "be8931d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Celda de Estilo (ejecutar una vez al principio)\n",
+    "# Establece un tema visual atractivo con fondo cuadriculado y un tamaño de figura por defecto más grande.\n",
+    "sns.set_theme(\n",
+    "    style=\"whitegrid\",\n",
+    "    rc={\n",
+    "        \"figure.figsize\": (16, 8),\n",
+    "        \"axes.titlesize\": 18,\n",
+    "        \"axes.labelsize\": 14,\n",
+    "        \"xtick.labelsize\": 12\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d22ff114",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Agrupar por año y sumar el consumo global\n",
+    "consumo_global_anual = df_long.groupby('Year')['Consumo'].sum().reset_index()\n",
+    "\n",
+    "# Graficar la tendencia global\n",
+    "plot_data(consumo_global_anual, \n",
+    "          x='Year', \n",
+    "          y='Consumo', \n",
+    "          kind='line', \n",
+    "          title='Consumo Mundial de Café (1990-2019)', \n",
+    "          xlabel='Año', \n",
+    "          ylabel='Consumo (en tazas)',\n",
+    "          add_labels=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "950d39e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calcular el consumo total por país y obtener el top 10\n",
+    "top_10_paises = df_long.groupby('Pais')['Consumo'].sum().nlargest(10).reset_index()\n",
+    "\n",
+    "# Graficar el top 10\n",
+    "plot_data(top_10_paises, \n",
+    "          x='Pais', \n",
+    "          y='Consumo', \n",
+    "          title='Top 10 Países por Consumo Total de Café (1990-2019)', \n",
+    "          xlabel='País', \n",
+    "          ylabel='Consumo Acumulado (en tazas)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "e57e0f21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_cagr(df, min_years=15):\n",
+    "    \"\"\"Calcula la tasa de crecimiento anual compuesta para cada país,\n",
+    "       filtrando por un mínimo de años para mayor robustez.\"\"\"\n",
+    "    cagr_data = df.sort_values('Year').groupby('Pais').agg(\n",
+    "        start_year=('Year', 'min'),\n",
+    "        end_year=('Year', 'max'),\n",
+    "        start_value=('Consumo', 'first'),\n",
+    "        end_value=('Consumo', 'last')\n",
+    "    ).reset_index()\n",
+    "\n",
+    "    # Evitar división por cero\n",
+    "    cagr_data = cagr_data[cagr_data['start_value'] > 0]\n",
+    "    \n",
+    "    # Calcular el número de años\n",
+    "    cagr_data['num_years'] = cagr_data['end_year'] - cagr_data['start_year']\n",
+    "    \n",
+    "    # --- MODIFICACIÓN CLAVE: Filtrar por un rango de años mínimo ---\n",
+    "    # Esto evita que un pico de 1 o 2 años dé un CAGR engañosamente alto\n",
+    "    cagr_data = cagr_data[cagr_data['num_years'] >= min_years]\n",
+    "\n",
+    "    # Calcular CAGR\n",
+    "    cagr_data['CAGR'] = ((cagr_data['end_value'] / cagr_data['start_value']) ** (1 / cagr_data['num_years'])) - 1\n",
+    "    \n",
+    "    return cagr_data.sort_values('CAGR', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "a13706b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_data(data, x, y, kind='bar', title='', xlabel='', ylabel='', add_labels=True):\n",
+    "    \"\"\"Crea un gráfico de barras o líneas con diseño mejorado y etiquetado en todos los puntos.\"\"\"\n",
+    "    fig, ax = plt.subplots()\n",
+    "    \n",
+    "    hue_col = 'Tipo_Cafe' if 'Tipo_Cafe' in data.columns else None\n",
+    "\n",
+    "    if kind == 'bar':\n",
+    "        sns.barplot(x=x, y=y, data=data, ax=ax, palette='viridis', edgecolor='black')\n",
+    "    elif kind == 'line':\n",
+    "        palette = 'tab10' if hue_col and data[hue_col].nunique() > 1 else 'dodgerblue'\n",
+    "        sns.lineplot(x=x, y=y, data=data, ax=ax, marker='o', hue=hue_col, palette=palette, linewidth=2.5)\n",
+    "\n",
+    "    ax.set_title(title, pad=20)\n",
+    "    ax.set_xlabel(xlabel)\n",
+    "    ax.set_ylabel(ylabel)\n",
+    "    ax.tick_params(axis='x', rotation=70)\n",
+    "\n",
+    "    if kind == 'line':\n",
+    "        ax.set_xticks(data[x].unique())\n",
+    "        \n",
+    "    sns.despine()\n",
+    "\n",
+    "    if add_labels:\n",
+    "        if kind == 'bar':\n",
+    "            for p in ax.patches:\n",
+    "                value = p.get_height()\n",
+    "                if 'Percent' in y: label = f'{value:.1f}%'\n",
+    "                else: label = f'{value/1e6:.0f}M'\n",
+    "                ax.annotate(label, (p.get_x() + p.get_width() / 2., value),\n",
+    "                            ha='center', va='center', xytext=(0, 9), textcoords='offset points', fontsize=10)\n",
+    "        \n",
+    "        elif kind == 'line':\n",
+    "            # --- CORRECCIÓN: Etiquetar TODOS los puntos, siempre ---\n",
+    "            y_range = ax.get_ylim()[1] - ax.get_ylim()[0]\n",
+    "            offset = y_range * 0.02 # Un pequeño offset vertical\n",
+    "\n",
+    "            for index, row in data.iterrows():\n",
+    "                value = row[y]\n",
+    "                label = f'{value/1e6:.0f}M'\n",
+    "                # Usamos un tamaño de fuente más pequeño para que no se sature\n",
+    "                ax.text(row[x], value + offset, label,\n",
+    "                        ha='center', va='bottom', fontsize=8, color='black')\n",
+    "\n",
+    "    # Asegurarse de que la leyenda se muestre si hay múltiples líneas\n",
+    "    if hue_col and data[hue_col].nunique() > 1:\n",
+    "        ax.legend(title=hue_col)\n",
+    "    else:\n",
+    "        # Ocultar la leyenda si solo hay una línea\n",
+    "        if ax.get_legend() is not None:\n",
+    "            ax.get_legend().remove()\n",
+    "            \n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8cfbf2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Celda 11:\n",
+    "# Calcular CAGR (ahora más robusto) y obtener el top 10\n",
+    "mercados_emergentes = calculate_cagr(df_long, min_years=15)\n",
+    "top_10_crecimiento = mercados_emergentes.nlargest(10, 'CAGR')\n",
+    "top_10_crecimiento['CAGR_Percent'] = top_10_crecimiento['CAGR'] * 100\n",
+    "\n",
+    "# Graficar el top 10 de crecimiento\n",
+    "plot_data(top_10_crecimiento, \n",
+    "          x='Pais', \n",
+    "          y='CAGR_Percent',\n",
+    "          kind='bar',\n",
+    "          title='Top 10 Mercados por Tasa de Crecimiento (CAGR > 15 años)', \n",
+    "          xlabel='País', \n",
+    "          ylabel='Tasa de Crecimiento Anual (%)')\n",
+    "\n",
+    "# Celda 13:\n",
+    "# Agrupar por año y tipo de café\n",
+    "consumo_por_tipo = df_long.groupby(['Year', 'Tipo_Cafe'])['Consumo'].sum().reset_index()\n",
+    "\n",
+    "# Graficar las tendencias (ahora con etiquetas al final de cada línea)\n",
+    "plot_data(consumo_por_tipo, \n",
+    "          x='Year', \n",
+    "          y='Consumo', \n",
+    "          kind='line',\n",
+    "          title='Consumo Mundial por Tipo de Café', \n",
+    "          xlabel='Año', \n",
+    "          ylabel='Consumo (en tazas)',\n",
+    "          add_labels=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4dfd014",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
