--- a/Inferencia.ipynb
+++ b/Inferencia.ipynb
@@ -571,7 +571,7 @@
       "source": [
         "\n",
         "PATH_COFFEE = \"coffee_db.csv\"\n",
-        "PATH_PRICES = \"precios.csv\"ss\n",
+        "PATH_PRICES = \"precios.csv\"\n",
         "\n",
         "def _try_read(path: str) -> pd.DataFrame:\n",
         "    if os.path.exists(path):\n",
