--- a/Inferencia.ipynb
+++ b/Inferencia.ipynb
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "b89c6be2",
       "metadata": {},
       "outputs": [],
@@ -47,7 +47,9 @@
         "from sklearn.ensemble import RandomForestRegressor\n",
         "from sklearn.base import clone\n",
         "from sklearn.metrics import mean_absolute_error\n",
-        "\n",
+        "# === AÑADIR: util para forzar predicciones >= 0 en targets no negativos ===\n",
+        "from sklearn.compose import TransformedTargetRegressor\n",
+        "from sklearn.preprocessing import FunctionTransformer\n",
         "np.random.seed(42)\n",
         "pd.set_option(\"display.max_columns\", 200)\n",
         "\n",
