--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -39,8 +39,8 @@
     "plt.rcParams[\"axes.titlesize\"] = 14\n",
     "plt.rcParams[\"axes.labelsize\"] = 12\n",
     "\n",
-    "DATA_CONSUMO = \"coffee_db.csv\"  # ajusta las rutas si lo ejecutas fuera de este entorno\n",
-    "DATA_PRECIOS = \"precios.csv\"\n",
+    "DATA_CONSUMO = \"data/coffee_db.csv\"  # ajusta las rutas si lo ejecutas fuera de este entorno\n",
+    "DATA_PRECIOS = \"data/precios.csv\"\n",
     "OUT_CLEAN = \"data/coffee_clean.csv\"\n",
     "\n",
     "Path(\"data\").mkdir(exist_ok=True)\n"
