--- a/Inferencia.ipynb
+++ b/Inferencia.ipynb
@@ -70,6 +70,21 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "889ab81c",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def positive_wrapper(regressor):\n",
+        "    return TransformedTargetRegressor(\n",
+        "        regressor=regressor,\n",
+        "        func=np.log1p,\n",
+        "        inverse_func=np.expm1\n",
+        "    )"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "ff680bb7",
       "metadata": {},
